--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@silvermine/videojs-quality-selector": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@videojs/http-streaming": "^3.0.2",
     "axios": "^1.4.0",
+    "flv.js": "^1.6.2",
     "history": "^4.10.1",
+    "hls.js": "^1.4.4",
+    "plyr": "^3.7.8",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.6.1",
+    "videojs-contrib-quality-levels": "^4.0.0",
+    "videojs-flvjs": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "video.js": "^8.3.0"
   }
 }
